<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editor_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:fitsSystemWindows="true"
    tools:context=".EditorActivity"
    tools:ignore="HarcodedText">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:background="@color/background_color"
            app:layout_constraintBottom_toTopOf="@+id/edittext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_border_light"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"

                app:menu="@menu/editor_appbar">

                <EditText
                    android:id="@+id/editor_currentNoteName"
                    android:layout_width="186dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:allowUndo="true"
                    android:background="@null"
                    android:fontFamily="@font/ibm_plex_mono_regular"
                    android:hint="@string/editor_name_placeholder"
                    android:inputType="text"
                    android:text="Untitled"
                    android:textAlignment="center"
                    android:textSize="24sp" />
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <com.example.noteapp.MarkdownEditText
            android:id="@+id/edittext"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="127dp"
            android:background="@color/background_color"
            android:fontFamily="@font/ibm_plex_mono_regular"
            android:gravity="top"
            android:hint="@string/editor_note_placeholder"
            android:textSize="20sp"
            android:windowSoftInputMode="adjustPan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbar" />

        <com.example.noteapp.MarkdownStylesBar
            android:id="@+id/stylesbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:clipToPadding="false"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:buttonColor="@color/style_button_color"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/ic_border_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/bottomNavigation_notesList"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:background="@color/background_color"
                android:contentDescription="@string/editor_notesList"
                android:paddingHorizontal="0dp"
                android:paddingVertical="0dp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_format_list_bulleted" />

            <ImageButton
                android:id="@+id/bottomNavigation_search"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="20dp"
                android:background="@color/background_color"
                android:contentDescription="@string/editor_search"
                android:paddingHorizontal="0dp"
                android:paddingVertical="0dp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/bottomNavigation_addNote"
                app:layout_constraintHorizontal_bias="0.254"
                app:layout_constraintStart_toEndOf="@+id/bottomNavigation_notesList"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.533"
                app:srcCompat="@drawable/ic_search" />

            <ImageButton
                android:id="@+id/bottomNavigation_addNote"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/background_color"
                android:contentDescription="@string/editor_addNote"
                android:paddingHorizontal="0dp"
                android:paddingVertical="0dp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.533"
                app:srcCompat="@drawable/ic_add_note" />

            <ImageButton
                android:id="@+id/bottomNavigation_previousNote"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/background_color"
                android:contentDescription="@string/editor_previousNote"
                android:paddingHorizontal="0dp"
                android:paddingVertical="0dp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/bottomNavigation_nextNote"
                app:layout_constraintStart_toEndOf="@+id/bottomNavigation_addNote"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.533"
                app:srcCompat="@drawable/ic_less_than" />

            <ImageButton
                android:id="@+id/bottomNavigation_nextNote"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="16dp"
                android:background="@color/background_color"
                android:contentDescription="@string/editor_nextNote"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_greater_than" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/editor_sidemenu" />

</androidx.drawerlayout.widget.DrawerLayout>